Upgrade to Langfuse Python SDK v3 and replace deprecated patterns

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Langfuse SDK
-langfuse>=2.0.0
+# Langfuse SDK (v3 - Latest with OpenTelemetry support)
+langfuse>=3.0.0
 
 # LLM Provider SDKs
 openai>=1.0.0
