--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   langfuse-app:
     build: .
@@ -18,61 +16,143 @@ services:
       - langfuse-network
     restart: unless-stopped
 
-  # Optional: Local Langfuse instance (self-hosted)
-  langfuse-server:
-    image: langfuse/langfuse:latest
+  # Self-hosted Langfuse (based on official docker-compose.yml)
+  langfuse-web:
+    image: docker.io/langfuse/langfuse:3
     container_name: langfuse-server
+    restart: always
     depends_on:
-      - postgres
-      - clickhouse
-      - redis
+      postgres:
+        condition: service_healthy
+      clickhouse:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://langfuse:langfuse@postgres:5432/langfuse
-      - CLICKHOUSE_URL=http://clickhouse:8123
-      - CLICKHOUSE_USER=default
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET:-changeme}
       - NEXTAUTH_URL=http://localhost:3000
       - SALT=${SALT:-changeme}
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-0000000000000000000000000000000000000000000000000000000000000000}
+      - TELEMETRY_ENABLED=false
+      - CLICKHOUSE_MIGRATION_URL=clickhouse://clickhouse:9000
+      - CLICKHOUSE_URL=http://clickhouse:8123
+      - CLICKHOUSE_USER=clickhouse
+      - CLICKHOUSE_PASSWORD=clickhouse
+      - CLICKHOUSE_CLUSTER_ENABLED=false
+      - LANGFUSE_S3_EVENT_UPLOAD_BUCKET=langfuse
+      - LANGFUSE_S3_EVENT_UPLOAD_ACCESS_KEY_ID=minio
+      - LANGFUSE_S3_EVENT_UPLOAD_SECRET_ACCESS_KEY=miniosecret
+      - LANGFUSE_S3_EVENT_UPLOAD_ENDPOINT=http://minio:9000
+      - LANGFUSE_S3_EVENT_UPLOAD_FORCE_PATH_STYLE=true
+      - LANGFUSE_S3_EVENT_UPLOAD_REGION=us-east-1
+      - LANGFUSE_S3_MEDIA_UPLOAD_BUCKET=langfuse
+      - LANGFUSE_S3_MEDIA_UPLOAD_ACCESS_KEY_ID=minio
+      - LANGFUSE_S3_MEDIA_UPLOAD_SECRET_ACCESS_KEY=miniosecret
+      - LANGFUSE_S3_MEDIA_UPLOAD_ENDPOINT=http://localhost:9090
+      - LANGFUSE_S3_MEDIA_UPLOAD_FORCE_PATH_STYLE=true
+      - LANGFUSE_S3_MEDIA_UPLOAD_REGION=us-east-1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_AUTH=myredissecret
     ports:
       - "3000:3000"
     networks:
       - langfuse-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 40s
     profiles:
       - self-hosted
 
   postgres:
-    image: postgres:15-alpine
+    image: postgres:17-alpine
     container_name: langfuse-postgres
+    restart: always
     environment:
-      - POSTGRES_USER=langfuse
-      - POSTGRES_PASSWORD=langfuse
-      - POSTGRES_DB=langfuse
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - langfuse-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 3s
+      timeout: 10s
+      retries: 10
     profiles:
       - self-hosted
 
   clickhouse:
-    image: clickhouse/clickhouse-server:latest
+    image: docker.io/clickhouse/clickhouse-server
     container_name: langfuse-clickhouse
+    restart: always
+    user: "101:101"
+    environment:
+      - CLICKHOUSE_DB=default
+      - CLICKHOUSE_USER=clickhouse
+      - CLICKHOUSE_PASSWORD=clickhouse
     volumes:
       - clickhouse-data:/var/lib/clickhouse
+      - clickhouse-logs:/var/log/clickhouse-server
     networks:
       - langfuse-network
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 1s
     profiles:
       - self-hosted
 
   redis:
-    image: redis:7-alpine
+    image: docker.io/redis:7
     container_name: langfuse-redis
+    restart: always
+    command: >
+      --requirepass myredissecret
+      --maxmemory-policy noeviction
     volumes:
       - redis-data:/data
     networks:
       - langfuse-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "--askpass", "ping"]
+      interval: 3s
+      timeout: 10s
+      retries: 10
+    profiles:
+      - self-hosted
+
+  minio:
+    image: cgr.dev/chainguard/minio
+    container_name: langfuse-minio
+    restart: always
+    entrypoint: sh
+    command: -c 'mkdir -p /data/langfuse && minio server --address ":9000" --console-address ":9001" /data'
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=miniosecret
+    ports:
+      - "9090:9000"
+    volumes:
+      - minio-data:/data
+    networks:
+      - langfuse-network
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 1s
+      timeout: 5s
+      retries: 5
+      start_period: 1s
     profiles:
       - self-hosted
 
@@ -83,5 +163,7 @@ networks:
 volumes:
   postgres-data:
   clickhouse-data:
+  clickhouse-logs:
   redis-data:
+  minio-data:
 
